MM-12996/MM-13229 - Updating modals on mobile and fixing plugin button on mobile (#2086)
* MM-12996 - Updating modals on mobile

* Updating snapshots

* Updating test

* Updating test

* Updating tests

* Update unit tests for MobileChannelHeaderPlug

--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -1558,9 +1558,24 @@
             }
 
             .more-modal {
+                .modal-content {
+                    display: flex;
+                    flex-direction: column;
+                }
+
+                .modal-header {
+                    flex: 0 0 56px;
+                }
+
                 .modal-body {
-                    max-height: calc(100vh - 62px);
-                    padding-bottom: 5px;
+                    flex: 1 1 auto;
+                    max-height: 100%;
+                    display: flex;
+                }
+
+                .filtered-user-list {
+                    flex: 1 1 auto;
+                    height: auto;
                 }
             }
         }
